@@ -158,6 +158,24 @@ load_config ()
 	      preferences.markup_song_browser = g_strdup (buf);
 	    }
 	}
+      else if (!strncmp (buffer, "pl2 tooltip timeout:", 20))
+      {
+	      gchar *buf = g_strstrip (&buffer[20]);
+	      if (buf != NULL)
+	      {
+		      info.pl2_tooltip = atoi (buf);
+	      }
+      }
+      else if (!strncmp (buffer, "pl2 do tooltip:", 15))
+      {
+	      gchar *buf = g_strstrip (&buffer[15]);
+	      if (buf != NULL)
+	      {
+		      info.pl2_do_tooltip = atoi (buf);
+	      }
+      }
+      
+
 
       memset (buffer, '\0', 1024);
 
@@ -166,34 +184,36 @@ load_config ()
   g_free (filename);
 }
 
-void
+	void
 save_config ()
 {
-  gchar *filename = g_strdup_printf ("%s/%s", g_getenv ("HOME"), CONFIG);
-  FILE *fp;
+	gchar *filename = g_strdup_printf ("%s/%s", g_getenv ("HOME"), CONFIG);
+	FILE *fp;
 
-  fp = fopen (filename, "w");
-  if (fp == NULL)
-    {
-      g_free (filename);
-      return;
-    }
-  fprintf (fp, "host: %s\n", preferences.host);
-  fprintf (fp, "port: %i\n", preferences.port);
-  fprintf (fp, "timeout: %.2f\n", preferences.timeout);
-  fprintf (fp, "auto-connect: %i\n", preferences.autoconnect);
-  fprintf (fp, "do tray: %i\n", info.do_tray);
-  fprintf (fp, "time format: %i\n", info.time_format);
-  fprintf (fp, "do popup: %i\n", info.popup.do_popup);
-  fprintf (fp, "popup pos: %i\n", info.popup.position);
-  fprintf (fp, "popup stay: %i\n", info.popup.popup_stay);
-  fprintf (fp, "popup state: %i\n", info.popup.show_state);
-  fprintf (fp, "popup timeout: %i\n", info.popup.timeout);
-  fprintf (fp, "use auth: %i\n", preferences.user_auth);
-  fprintf (fp, "auth pass: %s\n", preferences.password);
-  fprintf (fp, "markup main display: %s\n", preferences.markup_main_display);
-  fprintf (fp, "markup playlist: %s\n", preferences.markup_playlist);
-    fprintf (fp, "markup song browser: %s\n", preferences.markup_song_browser);
-  fclose (fp);
-  g_free (filename);
+	fp = fopen (filename, "w");
+	if (fp == NULL)
+	{
+		g_free (filename);
+		return;
+	}
+	fprintf (fp, "host: %s\n", preferences.host);
+	fprintf (fp, "port: %i\n", preferences.port);
+	fprintf (fp, "timeout: %.2f\n", preferences.timeout);
+	fprintf (fp, "auto-connect: %i\n", preferences.autoconnect);
+	fprintf (fp, "do tray: %i\n", info.do_tray);
+	fprintf (fp, "time format: %i\n", info.time_format);
+	fprintf (fp, "do popup: %i\n", info.popup.do_popup);
+	fprintf (fp, "popup pos: %i\n", info.popup.position);
+	fprintf (fp, "popup stay: %i\n", info.popup.popup_stay);
+	fprintf (fp, "popup state: %i\n", info.popup.show_state);
+	fprintf (fp, "popup timeout: %i\n", info.popup.timeout);
+	fprintf (fp, "use auth: %i\n", preferences.user_auth);
+	fprintf (fp, "auth pass: %s\n", preferences.password);
+	fprintf (fp, "markup main display: %s\n", preferences.markup_main_display);
+	fprintf (fp, "markup playlist: %s\n", preferences.markup_playlist);
+	fprintf (fp, "markup song browser: %s\n", preferences.markup_song_browser);
+	fprintf (fp, "pl2 do tooltip: %i\n", info.pl2_do_tooltip);
+	fprintf (fp, "pl2 tooltip timeout: %i\n", info.pl2_tooltip);	
+	fclose (fp);
+	g_free (filename);
 }
