@@ -129,6 +129,11 @@ set_default_values ()
 	 * updating 
 	 */
 	info.updating = FALSE;
+
+	/* tooltip playlist
+	 */
+	info.pl2_tooltip = 800;
+	info.pl2_do_tooltip = TRUE;
 }
 
 
